--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-template",
+  "name": "queue-management-system",
   "private": "false",
   "version": "0.0.0",
   "description": "description of the projet",
@@ -73,98 +73,98 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.4",
-    "@radix-ui/react-tooltip": "^1.1.6",
-    "@vitejs/plugin-react-swc": "^3.7.2",
-    "autoprefixer": "^10.4.20",
-    "axios": "^1.7.9",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@vitejs/plugin-react-swc": "^3.11.0",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cobe": "^0.6.3",
-    "dotenv": "^16.4.7",
+    "cobe": "^0.6.5",
+    "dotenv": "^16.6.1",
     "dotenv-safe": "^9.1.0",
-    "embla-carousel-react": "^8.5.2",
+    "embla-carousel-react": "^8.6.0",
     "env-var": "^7.5.0",
-    "framer-motion": "^11.15.0",
-    "konva": "^9.3.16",
+    "framer-motion": "^11.18.2",
+    "konva": "^9.3.22",
     "lucide-react": "^0.468.0",
-    "motion": "^12.0.0",
-    "next-themes": "^0.4.4",
+    "motion": "^12.23.24",
+    "next-themes": "^0.4.6",
     "path": "^0.12.7",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.6",
     "process": "^0.11.10",
-    "react": "^19.0.0",
+    "react": "^19.2.0",
     "react-cookie": "^7.2.2",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.0",
     "react-helmet-async": "^2.0.5",
-    "react-hook-form": "^7.54.2",
-    "react-icons": "^5.4.0",
-    "react-konva": "^19.0.1",
-    "react-router-dom": "^7.0.2",
+    "react-hook-form": "^7.65.0",
+    "react-icons": "^5.5.0",
+    "react-konva": "^19.0.10",
+    "react-router-dom": "^7.9.4",
     "react-spring": "^9.7.5",
     "react-three-fiber": "^6.0.13",
     "react-zdog": "^1.2.2",
     "rimraf": "^6.0.1",
     "sitemap": "^8.0.0",
-    "sonner": "^1.7.2",
-    "swiper": "^11.2.1",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss": "^3.4.17",
+    "sonner": "^1.7.4",
+    "swiper": "^11.2.10",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.18",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.171.0",
     "ts-node": "^10.9.2",
-    "uuid": "^11.0.3",
-    "vite": "^6.0.4",
+    "uuid": "^11.1.0",
+    "vite": "^6.4.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "winston": "^3.17.0",
+    "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0",
     "zdog": "^1.1.3",
-    "zod": "^3.24.1",
-    "zustand": "^5.0.2"
+    "zod": "^3.25.76",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.6.1",
-    "@commitlint/config-conventional": "^19.6.0",
-    "@eslint/js": "^9.17.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@eslint/js": "^9.37.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/dotenv": "^8.2.3",
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
+    "@types/node": "^22.18.10",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@types/swiper": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.18.1",
-    "@typescript-eslint/parser": "^8.18.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@typescript-eslint/eslint-plugin": "^8.46.1",
+    "@typescript-eslint/parser": "^8.46.1",
+    "@vitejs/plugin-react": "^4.7.0",
+    "@vitejs/plugin-vue": "^5.2.4",
     "@vitest/coverage-v8": "2.1.8",
-    "@vitest/expect": "^2.1.8",
-    "@vitest/ui": "^2.1.8",
-    "eslint": "^9.17.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
+    "@vitest/expect": "^2.1.9",
+    "@vitest/ui": "^2.1.9",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^9.1.2",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^15.15.0",
     "husky": "^9.1.7",
     "jsdom": "^25.0.1",
-    "lint-staged": "^15.2.11",
-    "markdownlint": "^0.37.2",
+    "lint-staged": "^15.5.2",
+    "markdownlint": "^0.37.4",
     "markdownlint-cli": "^0.43.0",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "react-devtools": "^6.0.1",
-    "rollup": "^4.28.1",
-    "serve": "^14.2.4",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "react-devtools": "^6.1.5",
+    "rollup": "^4.52.4",
+    "serve": "^14.2.5",
     "standard-version": "^9.5.0",
-    "typedoc": "^0.27.5",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.15.0",
-    "vitest": "^2.1.8"
+    "typedoc": "^0.27.9",
+    "typescript": "~5.7.3",
+    "typescript-eslint": "^8.46.1",
+    "vitest": "^2.1.9"
   }
 }
