--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,24 +8,28 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+
     /* Bundler mode */
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    // Setting shortcut
+
+    /* Aliases */
     "paths": {
       "@/*": ["./src/*"]
     },
-    // Active Node type
-    "types": ["node", "vite/client", "vitest/globals"]
+
+    /* ✅ Add these React types */
+    "types": ["node", "vite/client", "vitest/globals", "react", "react-dom"]
   },
   "include": ["src"]
 }
